name:                validated-types
version:             0.1.0.0
synopsis:            Type-level constraints on strings
description:         Please see README.md
homepage:            https://github.com/seanhess/validated-types#readme
license:             BSD3
license-file:        LICENSE
author:              Sean Hess
maintainer:          seanhess@gmail.com
copyright:           Orbital Labs
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Data.Validated.MaxLength
    , Data.Validated.EqLength
  build-depends:
      base >= 4.7 && < 5
    , text
  default-language:    Haskell2010

test-suite validated-types-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , validated-types
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/seanhess/validated-types
